--- a/apptio_automation/pytest.ini
+++ b/apptio_automation/pytest.ini
@@ -3,4 +3,4 @@
 [pytest]
 norecursedirs = __pycache* .cache Apptio Framework Jsonfiles Results
 testpaths = Tests
-addopts = --html=c:\workingdirectory\att\sample3.html --verbose --tb=short
+addopts = --excelreport=report.xlsx
